--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
         <!-- Buttons -->
         <div class="buttons">
-            <button class="button" onclick="displayInfo('Ammonia Level: ' + ammoniaLevel + ' ppm')">Ammonia Level</button>
+            <button class="button" onclick="displayInfo('Ammonia Level: ' + ammoniaLevel + ' ppm')">Nutrition Level</button>
             <button class="button" onclick="displayInfo('Number of Plants: ' + numberOfPlants)">Number of Plants</button>
             <button class="button" onclick="displayInfo('Water Quality: ' + waterQuality)">Water Quality</button>
             <button class="button" onclick="displayInfo('pH Level: ' + pHLevel)">pH Level</button>
